--- a/ravepaymentgateway/views/css/ravepaymentgateway.css
+++ b/ravepaymentgateway/views/css/ravepaymentgateway.css
@@ -1,5 +1,5 @@
 p.payment_module span.rave-payment-gateway {
-  background: url('../img/rave-logo.png') 15px 15px no-repeat #fbfbfb;
+  background: url('../img/logo.svg') 8px 2px no-repeat #fbfbfb;
   display: block;
   border: 1px solid #d6d4d4;
   -moz-border-radius: 4px;
