--- a/ravepaymentgateway/views/css/ravepaymentgateway.css
+++ b/ravepaymentgateway/views/css/ravepaymentgateway.css
@@ -1,51 +1,16 @@
-p.payment_module span.rave-payment-gateway {
-  background: url('../img/logo.svg') 8px 2px no-repeat #fbfbfb;
+p.payment_module a.ravepaymentgateway {
+  background: #fbfbfb url("../img/logo.svg") no-repeat scroll 15px;
+}
+p.payment_module a.ravepaymentgateway::after{
+  color: #777;
+  content: "";
   display: block;
-  border: 1px solid #d6d4d4;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  font-size: 17px;
-  line-height: 23px;
-  color: #333;
-  font-weight: bold;
-  padding: 33px 40px 34px 99px;
-  letter-spacing: -1px;
-  position: relative;
-}
-
-p.payment_module span.rave-payment-gateway:hover {
-  background-color: #f6f6f6;
-}
-
-button.rave-pay-now-button {
-  -moz-user-select: none;
-  -ms-touch-action: manipulation;
-  -ms-user-select: none;
-  -webkit-user-select: none;
-  background-color: #0a2740;
-  border: 1px solid #142a3e;
-  border-radius: 4px;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.42857143;
-  margin: 0 0 6px;
-  outline: none;
-  padding: 6px 12px;
-  text-align: center;
-  touch-action: manipulation;
-  user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-}
-
-button.rave-pay-now-button:hover {
-  background-color: #3d5a73;
-}
-
-button.rave-pay-now-button:active {
-  background-color: #0a2740;
+  font-family: "FontAwesome";
+  font-size: 25px;
+  height: 22px;
+  margin-top: -11px;
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  width: 14px;
 }
